--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -19,6 +19,14 @@
     <a href="@Url.Action("Download", "Home")">@Model.DownloadedFile.FileName</a>
 }
 
+@if (ViewBag.DownloadedFile != null)
+{
+    <div class="alert alert-success" role="alert">
+        File has been processed. Download modified file: 
+        <a href="@Url.Action("Download", "Home", new { fileName = ViewBag.DownloadedFile.FileName })">@ViewBag.DownloadedFile.FileName</a>
+    </div>
+}
+
 @section Scripts {
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
