--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -20,6 +20,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="https://kit.fontawesome.com/deff9e6f63.js" crossorigin="anonymous"></script>
     <title>FConverter</title>
 </head>
 <body>
@@ -27,12 +29,12 @@
         <section class="nav-and-userInfo">
             <div class="userInfo">
                 <div class="user-image"></div>
-                <p class="user-name">Barry Bear</p>
-                <span class="user-email">barrybear@gmail.com</span>
+                <p class="user-name"></p>
+                <span class="user-email"></span>
             </div>
             <div class="nav">
                 <ul>
-                    <a href="#">
+                    <a href="#" id="home">
                     <li>
                         <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1.3em" width="1.3em" xmlns="http://www.w3.org/2000/svg">
                             <path d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"></path>
@@ -56,12 +58,7 @@
                     </a>
                     <a href="#">
                     <li>
-                        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1.3em" width="1.3em" xmlns="http://www.w3.org/2000/svg">
-                            <g>
-                                <path fill="none" d="M0 0h24v24H0z"></path><path fill-rule="nonzero" d="M22 13h-2V7h-8.414l-2-2H4v14h9v2H3a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h7.414l2 2H21a1 1 0 0 1 1 1v7zm-4 4v-3.5l5 4.5-5 4.5V19h-3v-2h3z"></path>
-                            </g>
-                        </svg>
-                        Files Shared by You
+                       
                     </li>
                     </a>
 
@@ -84,11 +81,12 @@
                         Help Center
                     </li>
                     </a>
-                    <a>
+                    <a href="#" id="logout">
                     <li>
                         <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg"><path d="M16 13L16 11 7 11 7 8 2 12 7 16 7 13z"></path><path d="M20,3h-9C9.897,3,9,3.897,9,5v4h2V5h9v14h-9v-4H9v4c0,1.103,0.897,2,2,2h9c1.103,0,2-0.897,2-2V5C22,3.897,21.103,3,20,3z"></path></svg>
+                        Logout
                     </li>
-                    Logout
+                    
                     </a>
                 </ul>
             </div>
@@ -96,51 +94,196 @@
         <section class="file-converter">
             <nav>
                 <div class="type-conversion-title">
-                    <p>CSV to Excel</p>
+                    <label for="file-type">Convert to:</label>
+                    <select id="file-type">
+                        <option value="csv">CSV (.csv)</option>
+                        <option value="xls">Excel (.xls)</option>
+                        <option value="xlsx">Excel (.xlsx)</option>
+                        <option value="pdf">PDF (.pdf)</option>
+                        <option value="doc">Word (.doc)</option>
+                        <option value="docx">Word (.docx)</option>
+                    </select>
+                    <label for="file-type">with Parameter Set:</label>
+                    <select id="parameter-type">
+                        
+                    </select>
                 </div>
-                <div class="conversion-parameters">
-                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M3 9.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z" clip-rule="evenodd"></path>
-                    </svg>
-                </div>
-            </nav>
-            <div class="drop-file">           
-                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" height="5em" width="5em" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M4.887 6.2l-.964-.165A2.5 2.5 0 103.5 11H6v1H3.5a3.5 3.5 0 11.59-6.95 5.002 5.002 0 119.804 1.98A2.501 2.501 0 0113.5 12H10v-1h3.5a1.5 1.5 0 00.237-2.981L12.7 7.854l.216-1.028a4 4 0 10-7.843-1.587l-.185.96z"></path>
-                        <path fill-rule="evenodd" d="M5 8.854a.5.5 0 00.707 0L8 6.56l2.293 2.293A.5.5 0 1011 8.146L8.354 5.5a.5.5 0 00-.708 0L5 8.146a.5.5 0 000 .708z" clip-rule="evenodd"></path>
-                        <path fill-rule="evenodd" d="M8 6a.5.5 0 01.5.5v8a.5.5 0 01-1 0v-8A.5.5 0 018 6z" clip-rule="evenodd"></path>
-                    </svg>
-                    <p>Drag your files here, file size less</p>
-                    <p class="file-size-desc">than 15MB or</p>
-                    <button >Browse File</button>
-                    <input id="file-input" type="file" style="display:none;">
-            </div>
-            <div class="files-readyFor-download">
-                <div class="ready-file">
-                    <div class="file-name">
-                        <p>Biography Nelson Mandela.doc</p>
-                    </div>
-                    <p class="btn">Converting...</p>
-                    <div class="file-size">
-                        <p>2.31 mb</p>
+                <div class="dropdown">
+                    <div class="conversion-parameters">
                         <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M.5 8a.5.5 0 01.5.5V12a1 1 0 001 1h12a1 1 0 001-1V8.5a.5.5 0 011 0V12a2 2 0 01-2 2H2a2 2 0 01-2-2V8.5A.5.5 0 01.5 8z" clip-rule="evenodd"></path>
-                            <path fill-rule="evenodd" d="M5 7.5a.5.5 0 01.707 0L8 9.793 10.293 7.5a.5.5 0 11.707.707l-2.646 2.647a.5.5 0 01-.708 0L5 8.207A.5.5 0 015 7.5z" clip-rule="evenodd"></path>
-                            <path fill-rule="evenodd" d="M8 1a.5.5 0 01.5.5v8a.5.5 0 01-1 0v-8A.5.5 0 018 1z" clip-rule="evenodd"></path>
+                            <path fill-rule="evenodd" d="M3 9.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z" clip-rule="evenodd"></path>
                         </svg>
                     </div>
+                    <div class="dropdown-content">
+                        <a href="#" id="viewParameters">View Parameters</a>
+                        <a href="#" id="setParameters">Add Parameters</a>
+                        <a id="convertAll" href="#">Convert All</a>
+                        <a id="deleteAll" href="#">Delete All</a>
+                    </div>
                 </div>
+
+                <div id="myModal" class="modal">
+
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <span class="close">&times;</span>
+                        <label for="paramName">Set Name:</label>
+                        <input type="text" id="paramName" name="paramName" value="">
+                        <div class="titleHeaders">
+                                <h3>Values</h3>
+                            <h3>to</h3>
+                            <h3>Parameters</h3>
+                            </div>
+                        <div class="parameterInputValues">    
+                            
+                        <div class="conditionalValues">
+                            <select class="conditional-type-value1">
+                                <option value="greaterThan">&gt;</option>
+                                <option value="lessThan">&lt;</option>
+                                <option value="greaterOrEqual">&ge;</option>
+                                <option value="lessOrEqual">&le;</option>
+                                <option value="equal">=</option>
+                            </select>
+
+                             <select class="conditional-type-value2">
+                                <option value="greaterThan">&gt;</option>
+                                <option value="lessThan">&lt;</option>
+                                <option value="greaterOrEqual">&ge;</option>
+                                <option value="lessOrEqual">&le;</option>
+                                <option value="equal">=</option>
+                            </select>
+                        </div>
+                        
+                        <div class="valueSets">
+                            <form>
+                                
+
+                                <label for="value1">Value 1:</label>
+                                <input type="text" id="value1" name="param1" value="">
+
+                                <label for="value2">Value 2:</label>
+                                <input type="text" id="value2" name="param2" value="">
+                            </form>
+                        </div>
+                        
+                        <div class="parameterSets">
+                        <form>
+                            
+
+                            <label for="param1">Parameter 1:</label>
+                            <input type="text" id="param1" name="param1" value="">
+
+                            <label for="param2">Parameter 2:</label>
+                            <input type="text" id="param2" name="param2" value="">
+
+                            
+                        </form>
+                            
+                        </div>
+                        
+                        </div>
+                        <input type="submit" id="saveParameters" value="Save">
+                    </div>
+
+                </div>
+
+                <div id="myModalView" class="modal">
+
+                    <!-- Modal content -->
+                    <div class="modal-content" id="viewParameter">
+                        <span class="close">&times;</span>
+                        <label for="paramName">Set Name:</label>
+                        <select id="parameter-type-view">
+                        </select>
+                        <div class="titleHeaders">
+                            <h3>Values</h3>
+                            <h3>to</h3>
+                            <h3>Parameters</h3>
+                        </div>
+                        <div class="parameterInputValues">
+
+                            <div class="valueSets">
+                                <form>
+
+
+                                    <label for="value1">Value 1:</label>
+                                    <input type="text" id="value1View" name="param1" >
+
+                                    <label for="value2">Value 2:</label>
+                                    <input type="text" id="value2View" name="param2" value="">
+                                </form>
+                            </div>
+
+                            <div class="parameterSets">
+                                <form>
+
+
+                                    <label for="param1">Parameter 1:</label>
+                                    <input type="text" id="param1View" name="param1" >
+
+                                    <label for="param2">Parameter 2:</label>
+                                    <input type="text" id="param2View" name="param2" value="">
+
+
+                                </form>
+
+                            </div>
+
+                        </div>
+                        <input type="submit" id="saveParameters" value="Save">
+                    </div>
+
+                </div>
+
+            </nav>
+            <form method="post" enctype="multipart/form-data">
+                 <div class="form-group">
+                    <div class="drop-file" id="getInput">
+                        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" height="5em" width="5em" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M4.887 6.2l-.964-.165A2.5 2.5 0 103.5 11H6v1H3.5a3.5 3.5 0 11.59-6.95 5.002 5.002 0 119.804 1.98A2.501 2.501 0 0113.5 12H10v-1h3.5a1.5 1.5 0 00.237-2.981L12.7 7.854l.216-1.028a4 4 0 10-7.843-1.587l-.185.96z"></path>
+                                    <path fill-rule="evenodd" d="M5 8.854a.5.5 0 00.707 0L8 6.56l2.293 2.293A.5.5 0 1011 8.146L8.354 5.5a.5.5 0 00-.708 0L5 8.146a.5.5 0 000 .708z" clip-rule="evenodd"></path>
+                                    <path fill-rule="evenodd" d="M8 6a.5.5 0 01.5.5v8a.5.5 0 01-1 0v-8A.5.5 0 018 6z" clip-rule="evenodd"></path>
+                                </svg>
+                            <p>Drag your files here or click, file size less</p>
+                            <p class="file-size-desc">than 15MB</p>
+                        <input type="file" class="form-control-file" id="fileInput" name="fileInput" style="display:none;">
+                    @*<button >Browse File</button>
+                    <input id="file-input" type="file" style="display:none;">*@
+                        </div>
+                </div>  
+            
+            <div class="files-readyFor-download">
+                
             </div>
+            </form>
             <div class="recommended-tools"></div>
         </section>
         <section class="file-history">
             <nav class="history">
                 <p>History</p>
-                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M3 9.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z" clip-rule="evenodd"></path>
-                </svg>
+                <div class="history-dropdown">
+                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M3 9.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z" clip-rule="evenodd"></path>
+                    </svg>
+                    <div class="file-history-dropdown-content">
+                        <a id="deleteAllHistory" href="#">Delete All</a>
+                    </div>
+                </div>
+                
+                
             </nav>
             <span>Today --------------------------</span>
+            <div class="file-history-download">
+                @*<div class="starred">
+                    <span class="material-symbols-outlined starred-file" id="star-icon">
+                        star
+                    </span>
+                </div>*@
+                
+                <p class="history-file-name">test file.csv</p>
+                
+            </div>
+
         </section>
     </main>
     <script src="index.js"></script>
@@ -149,16 +292,26 @@
 
 @if (Model != null && Model.DownloadedFile != null)
 {
-    <br />
-    <p>Download the converted file:</p>
-    <a href="@Url.Action("Download", "Home")">@Model.DownloadedFile.FileName</a>
+
+    <script>
+        var convertBtn = document.querySelector('.btn.btn-primary');
+        convertBtn.disabled = true;
+        convertBtn.textContent = 'Downloaded';
+
+        @*var fileNameDiv = document.querySelector('.file-name p');
+        fileNameDiv.textContent = '@Model.DownloadedFile.FileName';*@
+
+    </script>
 }
+
 
 @section Scripts {
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
+     
     <script>
+
         $(function () {
             $('#fileInput').change(function () {
                 var input = $(this);
@@ -166,5 +319,6 @@
                 input.parent().find('label').text(label);
             });
         });
+    
     </script>
 }
