--- a/WebApplication2/wwwroot/css/style.css
+++ b/WebApplication2/wwwroot/css/style.css
@@ -26,13 +26,13 @@ main {
     width: 100%;
 }
 
-.file-ready-menu{
+.file-ready-menu {
     font-size: 1.1rem;
 }
 
-.file-ready-menu:hover {
-    cursor: pointer;
-}
+    .file-ready-menu:hover {
+        cursor: pointer;
+    }
 
 
 a {
@@ -43,7 +43,6 @@ a {
 
 li {
     list-style-type: none;
-
 }
 
 
@@ -127,14 +126,14 @@ section.file-converter {
     margin-left: 3rem;
 }
 
-    .file-converter nav {
-        border-radius: 12px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        width: 100%;
-        margin-bottom: 1%;
-    }
+.file-converter nav {
+    border-radius: 12px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 1%;
+}
 
 .type-conversion-title {
     margin-left: 1.5rem;
@@ -144,19 +143,18 @@ section.file-converter {
     color: white;
 }
 
-    .type-conversion-title select{
+    .type-conversion-title select {
         width: 18%;
     }
 
-    type-conversion-title label {
-        font-family: "Montserrat",sans-serif;
-    }
+type-conversion-title label {
+    font-family: "Montserrat",sans-serif;
+}
 
 .conversion-parameters {
     margin-top: 1.2rem;
     margin-right: 1.5rem;
     color: white;
-
 }
 
 .drop-file {
@@ -222,17 +220,16 @@ input[type="file"] {
 }
 
 input[type="file"] {
-    
 }
 
-.form-group:hover{
+.form-group:hover {
     cursor: pointer;
 }
 
 
-    button:hover {
-        cursor: pointer;
-    }
+button:hover {
+    cursor: pointer;
+}
 
 .ready-file {
     width: 95%;
@@ -317,7 +314,7 @@ input[type="file"] {
             background-color: #337ab7;
         }
 
-.files-readyFor-download{
+.files-readyFor-download {
     overflow: scroll;
     height: 500px;
 }
@@ -341,14 +338,15 @@ input[type="file"] {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    
 }
+
 
     .history p {
         margin-left: 1rem;
         margin-top: 5%;
         color: white;
-        font-size: 1.2rem;    }
+        font-size: 1.2rem;
+    }
 
     .history svg {
         margin-right: 1rem;
@@ -372,7 +370,7 @@ input[type="file"] {
     overflow: scroll;
 }
 
-    .file-history-download::-webkit-scrollbar{
+    .file-history-download::-webkit-scrollbar {
         display: none;
     }
 
@@ -387,9 +385,9 @@ input[type="file"] {
         font-size: 1.6rem;
     }
 
-    .file-history-download span:hover {
-        cursor: pointer;
-    }
+        .file-history-download span:hover {
+            cursor: pointer;
+        }
 
 
 #file-type-select {
@@ -402,7 +400,7 @@ input[type="file"] {
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-    /*#file-type-select option {
+/*#file-type-select option {
         font-size: 16px;
         padding: 6px;
         background-color: #fff;
@@ -451,8 +449,6 @@ option {
 .dropdown {
     position: relative;
     display: inline-block;
-    
-    
 }
 
 .dropdown-content {
@@ -472,7 +468,6 @@ option {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    
 }
 
     .dropdown-content a:hover {
@@ -485,7 +480,6 @@ option {
     right: 2%;
     z-index: 1;
     background-color: white;
-
     width: 10rem;
 }
 
@@ -510,15 +504,15 @@ option {
 
 
 .modal {
-    display: none; 
-    position: fixed; 
+    display: none;
+    position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(0,0,0); 
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
 
@@ -531,39 +525,48 @@ option {
     padding: 20px;
     border: 1px solid #888;
     border-radius: 12px;
-    width: 40%;
-    height: 50%;
+    width: 30%;
+    height: 32%;
     color: white;
 }
 
-    .modal-content input{
+    .modal-content input {
         border-radius: 7px;
         text-indent: 2%;
+        height: 8%;
     }
 
-    .titleHeaders {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-content: center;
-        margin-top: 2%;
-    }
-
-.valueSets{
-    margin-bottom: 2%;
+.titleHeaders {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    margin-top: 2%;
 }
 
-    .valueSets input{
-        margin-right: 15%;
+    .titleHeaders h3 {
+        word-spacing: 20px;
     }
+
+.valueSets {
+    margin-bottom: 2%;
+    border-right: 2px solid white;
+}
+
+    .valueSets input {
+        margin-right: 15%;
+        height: 8%;
+    }
+
     .valueSets label {
         margin-right: 15%;
     }
 
 
-    .parameterSets {
-        margin-top: 0.5%;
-    }
+.parameterSets {
+    margin-top: 0.5%;
+    margin-left: 2%;
+}
 
 .parameterInputValues {
     display: flex;
@@ -572,31 +575,36 @@ option {
     align-content: center;
 }
 
-    .modal-content form {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-content: center;
-    }
+.modal-content form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
+}
 
-        .modal-content input{
-            width: 60%;
-        }
+.modal-content input {
+    width: 60%;
+    height: 6%;
+}
 
 #saveParameters {
-    width: 25%;
-    margin-left: 35%;
+    width: 20%;
+    height: 10%;
+    margin-left: 40%;
     margin-top: 5%;
     background-color: #f72d7a;
     color: white;
     border: none;
 }
 
-    
-
-    #paramName {
-        width: 30%;
+    #saveParameters:hover {
+        cursor: pointer;
     }
+
+
+#paramName {
+    width: 30%;
+}
 
 
 .close {
@@ -613,27 +621,36 @@ option {
         cursor: pointer;
     }
 
-    #myModalView .modal-content{
-        height: 50%;
-    }
+#myModalView .modal-content {
+    height: 50%;
+}
 
-.conditionalValues{
+.conditionalValues {
     width: 20%;
-    margin-top: 3%;
+    height: 100%;
+    margin-top: 1%;
+    margin-right: 2%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.conditionalValues select{
-    width: 40%;
-    margin-left: 60%;
-    font-size: 1.2rem;
+    .conditionalValues select {
+        width: 40%;
+        margin-left: 60%;
+        font-size: 1.2rem;
+    }
+
+        .conditionalValues select option {
+            font-size: 1.8rem;
+        }
+
+
+#titleHeaderView h3 {
+    margin-left: 20%;
+    word-spacing: 20px;
 }
-.conditionalValues select option{ 
-    font-size: 1.8rem;
+
+#inputValues {
+    margin-left: 15%;
 }
-
-
-
-
